--- a/templates/post.html
+++ b/templates/post.html
@@ -8,6 +8,7 @@ Product
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
 <br><br><br>
+<h2>Категория: {{ post.category.name }}</h2>
 <br><br>
 <h1>{{ post.heading }}</h1>
 <br>
