--- a/templates/posts.html
+++ b/templates/posts.html
@@ -9,7 +9,11 @@ Posts
 {% endblock title %}
 
 {% block content %}
+
     <br>
+    <a class="btn btn-outline-secondary"
+           href="{% url 'signup' %}">Зарегистрироваться</a>
+    <br><br><br>
     {% if perms.news.add_post %}
     <p align="right">
    <button
