--- a/templates/posts.html
+++ b/templates/posts.html
@@ -13,6 +13,8 @@ Posts
     {% if request.user.is_authenticated %}
     <a class="btn btn-outline-secondary"
            href="{% url 'account_logout' %}">Выйти</a>
+    <a class="btn btn-outline-secondary"
+           href="{% url 'subscriptions' %}">Подписки</a>
     {% else %}
     <a class="btn btn-outline-secondary"
            href="{% url 'account_login' %}">Войти</a>
