added weekly news email distribution via runapscheduler

--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
 
 <!-- Название у нас будет Product -->
 {% block title %}
-Product
+Пост
 {% endblock title %}
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
